Added soul lava tank widget